main view program

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -88,10 +88,14 @@
         <ProgressBar
             android:id="@+id/register_progress"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="344dp"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="175dp"
-            tools:layout_editor_absoluteX="8dp" />
+            android:layout_width="353dp"
+            android:layout_height="74dp"
+            tools:layout_editor_absoluteX="4dp"
+            android:layout_marginTop="251dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
 
