--- a/app/src/main/res/layout/activity_retrive_password.xml
+++ b/app/src/main/res/layout/activity_retrive_password.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.liyuaninc.liyuan.RetrivePassword.RetrivePasswordActivity">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="小伙子，忘记密码了吧"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="74dp"
+        android:layout_marginRight="151dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
