--- a/app/src/main/res/layout/frament_6.xml
+++ b/app/src/main/res/layout/frament_6.xml
@@ -4,4 +4,9 @@
     android:layout_height="match_parent"
     android:background="@mipmap/bg_fragment_6">
 
+
+    <ListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
