--- a/app/src/main/res/layout/helpdialog.xml
+++ b/app/src/main/res/layout/helpdialog.xml
@@ -43,6 +43,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
