--- a/app/src/main/res/layout/frament_6.xml
+++ b/app/src/main/res/layout/frament_6.xml
@@ -8,5 +8,7 @@
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
