--- a/app/src/main/res/layout/frament_7.xml
+++ b/app/src/main/res/layout/frament_7.xml
@@ -29,5 +29,8 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/transparent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/textView2"
+        android:layout_alignBottom="@+id/imageView3"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
