--- a/app/src/main/res/layout/activity_season_data.xml
+++ b/app/src/main/res/layout/activity_season_data.xml
@@ -15,15 +15,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="416dp"
+        android:layout_height="424dp"
         android:orientation="vertical"
-        android:layout_weight="0.82">
+        android:layout_weight="0.37">
 
         <TextView
-            android:id="@+id/viewtest"
+            android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="点击开始你的表演"
+            android:text="data"
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -31,5 +31,7 @@
 
     <com.liyuaninc.liyuan.ftc_season.season_xml_setting.hand1_setting
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></com.liyuaninc.liyuan.ftc_season.season_xml_setting.hand1_setting>
+        android:layout_height="wrap_content">
+    </com.liyuaninc.liyuan.ftc_season.season_xml_setting.hand1_setting>
+
 </LinearLayout>
