--- a/app/src/main/res/layout/frament_2.xml
+++ b/app/src/main/res/layout/frament_2.xml
@@ -10,8 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="12dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -36,7 +37,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="84dp"
+            android:layout_height="64dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -59,6 +60,7 @@
                 android:id="@+id/go2016"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
                 app:srcCompat="@drawable/news_mails_tips" />
         </LinearLayout>
 
