--- a/app/src/main/res/layout/activity_season_data.xml
+++ b/app/src/main/res/layout/activity_season_data.xml
@@ -15,23 +15,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="424dp"
+        android:layout_height="416dp"
         android:orientation="vertical"
-        android:layout_weight="0.37">
+        android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/textView7"
+
+        <ListView
+            android:id="@+id/datalist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="data"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
     <com.liyuaninc.liyuan.ftc_season.season_xml_setting.hand1_setting
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </com.liyuaninc.liyuan.ftc_season.season_xml_setting.hand1_setting>
-
+        android:layout_height="wrap_content"></com.liyuaninc.liyuan.ftc_season.season_xml_setting.hand1_setting>
 </LinearLayout>
