--- a/app/src/main/res/layout/datalist.xml
+++ b/app/src/main/res/layout/datalist.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_width="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_height="wrap_content"
-    android:id="@+id/MyListItem"
-    android:paddingBottom="3dip"
-    android:paddingLeft="10dip">
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:id="@+id/ItemTitle"
-        android:textSize="30dip">
-    </TextView>
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:id="@+id/ItemText">
-    </TextView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="385dp"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <ImageView
+            android:id="@+id/dataimage"
+            android:layout_width="76dp"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/rarcher" />
+
+        <TextView
+            android:id="@+id/dataname"
+            android:layout_width="match_parent"
+            android:layout_height="69dp"
+            android:textAlignment="textStart"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
