--- a/app/src/main/res/layout/season_head2.xml
+++ b/app/src/main/res/layout/season_head2.xml
@@ -14,9 +14,18 @@
 
         <ImageButton
             android:id="@+id/back"
-            android:layout_width="55dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/ic_league_out" />
+
+        <TextView
+            android:id="@+id/nowway"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.95"
+            android:textAlignment="center"
+            android:textSize="24sp" />
+
     </LinearLayout>
 </LinearLayout>
