--- a/app/src/main/res/layout/frament_8.xml
+++ b/app/src/main/res/layout/frament_8.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="62dp"
-        android:text="启动锁屏"
+        android:text="测试自动更新"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
@@ -23,4 +23,22 @@
         android:layout_marginEnd="61dp"
         android:layout_alignTop="@+id/startlock"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/startlock"
+        android:layout_alignStart="@+id/startlock"
+        android:layout_below="@+id/lockon"
+        android:layout_marginTop="22dp"
+        android:text="toast测试" />
+
+    <Switch
+        android:id="@+id/toast_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView7"
+        android:layout_alignBottom="@+id/textView7"
+        android:layout_alignStart="@+id/lockon" />
 </RelativeLayout>
