--- a/app/src/main/res/layout/frament_2.xml
+++ b/app/src/main/res/layout/frament_2.xml
@@ -57,13 +57,38 @@
                 android:textStyle="bold" />
 
             <ImageButton
+                android:id="@+id/go2017"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                app:srcCompat="@drawable/news_mails_tips" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ftc" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="2017——2018"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <ImageButton
                 android:id="@+id/go2016"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 app:srcCompat="@drawable/news_mails_tips" />
         </LinearLayout>
-
     </LinearLayout>
 
 </RelativeLayout>
