--- a/app/src/main/res/layout/hgz_set_page_layout.xml
+++ b/app/src/main/res/layout/hgz_set_page_layout.xml
@@ -234,9 +234,10 @@
                     android:id="@+id/textView13"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Beta 1.0"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignStart="@+id/textView9" />
+                    android:layout_alignParentTop="true"
+                    android:layout_alignStart="@+id/textView9"
+                    android:layout_marginTop="40dp"
+                    android:text="看看开发组有没有更新吧" />
 
                 <TextView
                     android:id="@+id/banbenhao"
@@ -283,6 +284,14 @@
                     android:layout_alignBaseline="@+id/textView26"
                     android:layout_alignBottom="@+id/textView26"
                     android:layout_alignParentStart="true" />
+
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Beta 1.0"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignStart="@+id/textView26" />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -309,6 +318,7 @@
                     android:layout_height="match_parent"
                     android:background="@android:color/transparent"
                     android:layout_alignParentTop="true"
+                    android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true" />
 
                 <TextView
@@ -319,11 +329,6 @@
                     android:layout_below="@+id/textView24"
                     android:text="小伙子，想不想知道更新了一些什么东西啊" />
             </RelativeLayout>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="10dp"
-                android:background="@color/text_content" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -336,6 +341,13 @@
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:background="@color/text_content" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
