--- a/app/src/main/res/layout/hgz_set_page_layout.xml
+++ b/app/src/main/res/layout/hgz_set_page_layout.xml
@@ -66,7 +66,7 @@
                 android:layout_marginLeft="10dp"
                 android:background="@color/white" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/personal_set"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -86,12 +86,22 @@
                     android:id="@+id/email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBaseline="@+id/tv2"
                     android:layout_gravity="center_vertical"
-                    android:layout_toRightOf="@+id/tv2"
                     android:gravity="center"
-                    android:text="   啧， 设置什么设置哦勇敢面对人生哦" />
-            </LinearLayout>
+                    android:text="啧， 设置什么设置哦勇敢面对人生哦"
+                    android:layout_marginStart="25dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true" />
+
+                <Button
+                    android:id="@+id/setting"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:backgroundTint="@android:color/transparent" />
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
