--- a/app/src/main/res/layout/hgz_set_page_layout.xml
+++ b/app/src/main/res/layout/hgz_set_page_layout.xml
@@ -93,13 +93,14 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true" />
 
+
                 <Button
                     android:id="@+id/setting"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
                     android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:backgroundTint="@android:color/transparent" />
+                    android:layout_alignParentStart="true" />
 
             </RelativeLayout>
 
